# notification-system

./: .gitignore  README.md  pyproject.toml  schema.graphql  worker.py
api/: constants.py  exceptions.py  main.py
api/config/: __init__.py  celery.py  database.py  redis.py  settings.py
api/constants/: __init__.py  enums.py  paths.py
api/graphql/: inputs.py  mutation.py  query.py  types.py  utils.py
api/models/: __init__.py  base.py  email_notification_model.py  notifications.py
api/queues/: __init__.py  notification_queue.py
api/repositories/: __init__.py  email_notification_repository.py  notifications.py
api/schemas/: __init__.py  api_error_schema.py  base.py  notification.py  password_change.py  password_reset.py  register.py  two_factor_auth.py
api/services/: __init__.py  email_service.py  load_template.py  token_service.py
api/tasks/: email_task.py
api/templates/: __init__.py  password_change.html  password_change.py  password_reset.html  password_reset.py  register.html  register.py  two_f_auth.html  two_f_auth.py
api/workers/: __init__.py  email_worker.py
app/: exceptions.py  main.py
app/config/: __init__.py  celery.py  database.py  redis.py  settings.py
app/constants/: __init__.py  enums.py
app/core/: __init__.py  logger.py
app/graphql/: mutation.py  query.py  utils.py
app/models/: __init__.py  base_model.py  email_notification_model.py  webhook_model.py
app/repositories/: __init__.py  email_notification_repository.py  webhook_repository.py
app/schemas/: __init__.py  date_range_schema.py  (+1 more)
db/: script.sql
test/: constants.py
(+60 files in other folders)
